# webscraperquart

./: .env.dev  .gitignore  README.md  pyproject.toml
.github/workflows/: main_webscraperquart.yml
src/qrt/: __init__.py  config.py  magic.py  serve.py  types.py
src/qrt/extensions/: __init__.py  base.py  cors.py  mongo.py  session.py
src/qrt/parser/views/: __init__.py  options.py  parser.py
src/qrt/scraper/domain/: __init__.py  scrape.py
src/qrt/scraper/views/: __init__.py  options.py  scraper.py
src/qrt/site/: __init__.py
src/qrt/site/views/: __init__.py  about.py  index.py
src/qrt/static/css/: progressbar.css  style.css
src/qrt/templates/layout/: base.html
src/qrt/templates/layout/include/: navigation.html
src/qrt/templates/parser/: page.html
src/qrt/templates/parser/partials/: options_drawer.html  parsed_content.html
src/qrt/templates/scraper/: page.html
src/qrt/templates/scraper/partials/: options_drawer.html  scraped_content.html
src/qrt/templates/site/: page.html
src/qrt/templates/site/about/: page.html
src/qrt/templates/site/index/: page.html
src/qrt/utils/: constants.py  scraping.py  string.py  tailwind.py
tests/: __init__.py  conftest.py
tests/extensions/: test_cors.py  test_session.py
tests/utils/: test_scraping.py  test_string.py  test_tailwind.py
