[tool.poetry]
name = "qrt"
version = "1.0.0"
description = ""
authors = ["Oleksii Hava <gavaalex2012@gmail.com>"]
readme = "README.md"
packages = [{include = "qrt", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
quart = "^0.19.4"
hypercorn = "^0.16.0"
quart-cors = "^0.7.0"
quart-login = {git = "https://github.com/0000matteo0000/quart-login.git"}
black = "^24.3.0"
quart-motor = "^2.4.7"
quart-openapi = {extras = ["doc"], version = "^1.7.2"}
python-dotenv = "^1.0.1"
quart-session = "^3.0.0"

[tool.poetry.scripts]
dev = "qrt.serve:dev"
prod = "qrt.serve:prod"

[tool.poetry.group.dev.dependencies]
pytest-asyncio = "^0.23.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
